# tusk

./: .gitignore  Cargo.toml  IconCollection.axicp  README.md  REPRODUCE.md  diesel.toml  flat-pro.axicp  install  office-pro.axicp  post-receive  tusk.toml  universal-pro-dark.axicp  win-confirm-changes.ps1  win-install.ps1  win-uninstall.ps1
_srv/: package-lock.json
_srv/http/: package-lock.json  tsconfig.json
_srv/http/pages/: directory.tera  index.tera  login.tera
_srv/http/static/: directory.js  directory.js.map  directory.ts  http.d.ts  http.js  style.css.map
_srv/http/template/: base.tera  page.tera
migrations/2023-07-25-201605_create_user/: up.sql
migrations/2023-08-30-191409_create_role/: down.sql  up.sql
migrations/2023-09-09-232650_password_reset/: down.sql  up.sql
srv/: office-pro-files.axicp  office-pro-ui-dark.axicp  office-pro-ui.axicp  package-lock.json  package.json
srv/bootstrap/http/static/: style.css  style.css.map
srv/bootstrap/scss/: _file-explorer.scss  bootstrap.scss
srv/http/: package.json
srv/http/pages/: directory.tera
srv/http/static/: HTTP2.js  HTTP2.js.map  _core.js.map  _core.ts  file_explorer.js  file_explorer.js.map  file_explorer.ts  http.js  http.js.map  http.ts  icons.js  icons.js.map  icons.ts  style.css.map  themes.js.map  themes.ts  tsconfig.json
srv/http/static/http/static/: themes.js  themes.js.map
srv/http/static/sf/src/: http.js.map  sf.js.map
srv/http/template/: base.tera  page.tera
srv/http/template/directory/: file.tera
srv/static/js/: file_explorer.js  file_explorer.js.map  file_explorer.ts  http.js  http.js.map  http.ts  icons.js  icons.js.map  icons.ts  tsconfig.json
srv/static/sf/src/: _core.js  _core.js.map  directory.js  directory.js.map  http.js  sf.js
srv/static/style/: style.css
srv/tera/pages/: directory.tera  index.tera  login.tera  settings.tera  storage.tera
srv/tera/pages/password_reset/: request.tera  verify.tera
srv/tera/template/: base.tera  macro.tera  page.tera
tusk-admin/: Cargo.toml
tusk-admin/src/: error.rs  main.rs  os.rs  role.rs  user.rs
tusk-admin/src/os/: tusk.service  unix.rs  windows.rs
tusk-backend/: Cargo.toml
tusk-backend/src/: config.rs  error.rs  lib.rs  resources.rs
tusk-backend/src/os/: unix.rs  windows.rs
tusk-backend/src/resources/: user.rs
tusk-core/: Cargo.toml  cert.pem  key.pem
tusk-core/benches/: password_hash.rs
tusk-core/src/: config.rs  error.rs  lib.rs  os.rs  resources.rs  schema.rs  session.rs
tusk-core/src/config/: diesel.rs  mail.rs  redis.rs  ssl.rs  tusk.rs
tusk-core/src/config/tusk/: contacts.rs  serve.rs  ui.rs
tusk-core/src/resources/: password_reset.rs  role.rs  user.rs
tusk-derive/: Cargo.toml
tusk-derive/src/: lib.rs
tusk-server/: Cargo.toml  mail-echo.py  tusk-test.toml
tusk-server/src/: api.rs  error.rs  gui.rs  lib.rs  main.rs  os.rs  settings.rs  ui.rs
tusk-server/src/api/: account.rs  directory.rs  session.rs  storage.rs  users.rs
tusk-server/src/os/: unix.rs  windows.rs
tusk-server/srv/storage/.public/: public.txt
tusk-server/srv/storage/00000000-0000-0000-0000-000000000003/: admin.txt
tusk-server/srv/storage/00000000-0000-0000-0000-000000000004/: user.txt
tusk-server/srv/storage/test/: test.txt
tusk-server/srv/tera/pages/: index.tera  page.tera  template.tera
tusk-server/tests/: test.rs
tusk-server/tests/api/: account.rs  mod.rs  session.rs  storage.rs
tusk-server/tests/ui/: mod.rs
