[package]
name = "tusk-admin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tusk"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
systemctl = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
windows-sys = "0.48"
winlog = "0.2"