[package]
name = "tusk-admin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tusk"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = "0.10"
secrecy = "0.8"
tusk-backend = { path = "../tusk-backend" }

[target.'cfg(unix)'.dependencies]
nix = "0.26"
systemctl = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
windows-sys = "0.48"
winlog = "0.2"