[package]
name = "tusk-admin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tusk"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "2"
console = "0.15"
dialoguer = "0.10"
env_logger = "0.10"
indicatif = "0.17"
log = { version = "0.4", features = ["std", "serde"] }
secrecy = "0.8"
tabled = { version = "0.12", features = ["color"] }
tusk-core = { path = "../tusk-core" }
uuid = { version = "1", features = ["serde", "v4"] }

[target.'cfg(unix)'.dependencies]
nix = "0.26"
systemctl = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
windows-sys = "0.48"
winlog = "0.2"