[package]
name = "tusk-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7", features = ["cookie-session", "redis-rs-tls-session"] }
actix-test = { version = "0.1", optional = true }
actix-web = { version = "4", features = ["rustls"] }
anyhow = "1"
bcrypt = { version = "0.14", features = ["zeroize"] }
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2"
lettre = "0.10"
log = { version = "0.4", features = ["std", "serde"] }
r2d2 = "0.8"
rand = "0.8"
rustls = "0.20.8"
rustls-pemfile = "1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tera = "1"
toml = "0.7"
uuid = { version = "1", features = ["serde", "v4"]}
env_logger = { version = "0.10", optional = true }
once_cell = { version = "1.18", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"
serde_test = "1.0"

[[bench]]
name = "password_hash"
harness = false

[features]
test_utils = ["dep:env_logger", "dep:once_cell", "dep:actix-test"]

[target.'cfg(unix)'.dependencies]
nix = "0.26"
systemctl = "0.2"
systemd = "0.10"
systemd-journal-logger = "1"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
windows-sys = "0.48"
winlog = "0.2"