[package]
name = "tusk-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = "4"
log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1", features = ["derive"] }
simple_logger = "4"
tera = "1"
tokio = "1"
tusk-derive = { path = "../tusk-derive" }

[target.'cfg(unix)'.dependencies]
nix = "0.26"
systemd-journal-logger = "1"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
winlog = "0.2"