[package]
name = "tusk-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session", "redis-rs-tls-session"] }
actix-web = { version = "4", features = ["rustls"] }
log = { version = "0.4", features = ["std", "serde"] }
rustls = "0.20.8"
rustls-pemfile = "1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
simple_logger = "4"
tera = "1"
tokio = "1"
toml = "0.7"
tusk-derive = { path = "../tusk-derive" }
tusk-backend = { path = "../tusk-backend" }

[target.'cfg(unix)'.dependencies]
nix = "0.26"
systemd = "0.10"
systemd-journal-logger = "1"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
winlog = "0.2"