[package]
name = "tusk-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-http = "3"
actix-multipart = "0.6"
actix-session = { version = "0.7", features = ["cookie-session", "redis-rs-tls-session"] }
actix-test = "0.1"
actix-web = { version = "4", features = ["rustls"] }
awc = { version = "3.2", features = ["rustls"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
futures-util = "0.3"
lettre = "0.10"
log = { version = "0.4", features = ["std", "serde"] }
notify = { version = "6.0.1", features = ["serde"] }
path-clean = "^1.0.1"
rustls = "0.20.8"
rustls-pemfile = "1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
simple_logger = "4"
tempfile = "3.7"
tera = "1"
tokio = "1"
toml = "0.7"
tusk-derive = { path = "../tusk-derive" }
tusk-core = { path = "../tusk-core" }
uuid = { version = "1", features = ["serde", "v4"]}
zxcvbn = "2.2"

[dev-dependencies]
once_cell = "1.18"
tusk-core = { path = "../tusk-core", features = ["test_utils"] }

[features]
test_utils = []

[target.'cfg(unix)'.dependencies]
nix = "0.26"
systemd = "0.10"
systemd-journal-logger = "1"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
winlog = "0.2"